--- a/styles.css
+++ b/styles.css
@@ -51,6 +51,10 @@
     align-items: center;
     width: 100%;
     height: 100%;
+    background: none;
+    border: none;
+    font-size: 44px;
+    font-weight: 700;
 }
 
 #cell-2,
